<resources>
    <string name="Add_a_button_was_clicked">Add a button was clicked</string>
    <string name="Add_a_friend">Let me to be your friend!</string>
    <string name="Add_group_members_fail">Add group members fail:</string>
    <string name="Agree_with_failure">Failed to accept</string>
    <string name="Agreed_to_your_group_chat_application">Accepted your group application</string>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="Apply_to_the_group_of">Apply to join the group</string>
    <string name="Are_agree_with">Accepting</string>
    <string name="Are_connected_to_each_other">Connecting to peer..</string>
    <string name="Are_logged_out">Logging out</string>
    <string name="Are_moving_to_blacklist">Moving to blacklist</string>
    <string name="Are_removed">Removing</string>
    <string name="Cant_chat_with_yourself">cannot chat with yourself</string>
    <string name="Change_the_group_name">Change group name</string>
    <string name="Confirm_password_cannot_be_empty">Confirm password cannot be empty!</string>
    <string name="Connection_failure">Connection failed!</string>
    <string name="Current_version">Current version</string>
    <string name="Delete_failed">Failed to delete</string>
    <string name="Delete_the_contact">Delete the contact</string>
    <string name="Did_not_download">Not yet downloaded</string>
    <string name="Dissolve_group_chat_tofail">Failed to dismiss the group:</string>
    <string name="Download_the_pictures">Download the pictures</string>
    <string name="Download_the_pictures_new">Download the pictures new</string>
    <string name="Empty_the_chat_record">Clear conversation</string>
    <string name="EnterpriseCentre_menu_1">职位招聘</string>
    <string name="EnterpriseCentre_menu_2">公司信息</string>
    <string name="EnterpriseCentre_menu_3">人才收藏</string>
    <string name="EnterpriseCentre_menu_4">企业认证</string>
    <string name="EnterpriseCentre_menu_5">消息中心</string>
    <string name="Exit_the_group_chat">Exit the group</string>
    <string name="Exit_the_group_chat_failure">Failed to exit the group:</string>
    <string name="Failed_to_create_groups">Failed to create groups</string>
    <string name="Failed_to_download_file">Failed to download file:</string>
    <string name="Failed_to_get_group_chat_information">Failed to get group information:</string>
    <string name="Failed_to_join_the_group_chat">Failed to join the group</string>
    <string name="File_does_not_exist">File does not exist</string>
    <string name="Group_chat">Group chat</string>
    <string name="Group_chat_information">The group description</string>
    <string name="Group_chat_profile">Group profile</string>
    <string name="Group_name_cannot_be_empty">Group name cannot be empty</string>
    <string name="Group_of_Lord">The group owner</string>
    <string name="Hands_free">Hands free</string>
    <string name="Has_agreed_to">Accepted</string>
    <string name="Has_agreed_to_your_friend_request">Accepted your request</string>
    <string name="Has_been_cancelled">Cancelled</string>
    <string name="Has_refused_to">Refused</string>
    <string name="Have_downloaded">Already downloaded</string>
    <string name="In_the_call">In the call..</string>
    <string name="Into_the_blacklist">Move to the blacklist?</string>
    <string name="Introduction">Brief</string>
    <string name="Invite_you_to_join_a_group_chat">Invite you to join this group</string>
    <string name="Is_download_voice_click_later">Downloading the voice message, click later</string>
    <string name="Is_landing">logining..</string>
    <string name="Is_moved_into_blacklist">Moving to blacklist..</string>
    <string name="Is_not_yet_connected_to_the_server">Not connect to server</string>
    <string name="Is_sending_a_request">Sending the request..</string>
    <string name="Is_the_registered">Registering..</string>
    <string name="Is_to_create_a_group_chat">Creating the group</string>
    <string name="Is_unblock">Unblocking group</string>
    <string name="Join_the_group_chat">Join the group</string>
    <string name="Log_Upload_failed">Failed to upload the log</string>
    <string name="Log_uploaded_successfully">Log was uploaded successfully</string>
    <string name="Login_failed">Login failed:</string>
    <string name="Logoff_notification">Logoff notification</string>
    <string name="Making_sure_your_location">Making sure your location..</string>
    <string name="Modify_the_group_name_successful">Modify the group name successful</string>
    <string name="Move_into_blacklist_failure">Move into blacklist failure</string>
    <string name="Move_into_blacklist_success">Move into blacklist success</string>
    <string name="Move_into_the_blacklist_new">Move into the blacklist</string>
    <string name="Network_error">Network error</string>
    <string name="Not_Set">Not set</string>
    <string name="Open_group_chat">Public group</string>
    <string name="Open_group_members_invited">Allow members to invite</string>
    <string name="Open_the_equipment_failure">Open the equipment failure!</string>
    <string name="Password_cannot_be_empty">Password cannot be empty!</string>
    <string name="Please_enter_a_username">Please enter a username</string>
    <string name="Recording_without_permission">未获取录音权限</string>
    <string name="Refused">Refused</string>
    <string name="Registered_successfully">Registered successfully</string>
    <string name="Registration_failed">Registration failed:</string>
    <string name="Remove_the_notification">Remove the notification</string>
    <string name="Removed_from_the_failure">Removed fail</string>
    <string name="Request_add_buddy_failure">Request add buddy failure:</string>
    <string name="Request_to_add_you_as_a_friend">You got a friend request</string>
    <string name="Request_to_join">Apply to join</string>
    <string name="Select_the_contact">Select the contact</string>
    <string name="Send_the_following_pictures">send the following pictures</string>
    <string name="Send_voice_need_sdcard_support">Send voice need sdcard support</string>
    <string name="Shielding_of_the_message">Block message</string>
    <string name="The_delete_button_is_clicked">The delete button is clicked</string>
    <string name="The_file_is_not_greater_than_10_m">The file is not greater than 10 m</string>
    <string name="The_new_group_chat">Create new group</string>
    <string name="The_other_is_hang_up">The peer has ended the call</string>
    <string name="The_other_is_not_online">The peer is not online</string>
    <string name="The_other_is_on_the_phone">The peer is on the phone</string>
    <string name="The_other_is_on_the_phone_please">The peer is busy now, please try later</string>
    <string name="The_other_party_did_not_answer">The peer did not answer</string>
    <string name="The_other_party_did_not_answer_new">The peer did not answer</string>
    <string name="The_other_party_has_refused_to">Call was refused</string>
    <string name="The_other_party_is_not_online">The peer is not online now, please try later</string>
    <string name="The_other_party_refused_to_accept">The call was refused</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="The_video_to_start">The video to start</string>
    <string name="This_user_is_already_your_friend">This user is already your friend</string>
    <string name="To_join_the_chat">Join the group</string>
    <string name="Two_input_password">Inconsistent password, please enter again!</string>
    <string name="Upload_the_log">Uploading the log</string>
    <string name="User_already_exists">User already existed!</string>
    <string name="User_name_cannot_be_empty">User name cannot be empty!</string>
    <string name="Version_number_is_wrong">Version number is wrong</string>
    <string name="Video_footage">Video record</string>
    <string name="Whether_the_public">Is public</string>
    <string name="Whether_to_empty_all_chats">Clear all messages?</string>
    <string name="Whether_to_send">Are you sure to send?</string>
    <string name="action_settings">Settings</string>
    <string name="activity_register_prompt">请检查手机号码是否正确，如果正确但长时间没有收到验证码短信，可能是因为短信运营商的网络不太给力，请点击下面的按钮拨打客服电话。</string>
    <string name="activity_register_title">快速注册</string>
    <string name="add_friend">Add friends</string>
    <string name="add_public_chat_room">add public chat room</string>
    <string name="add_public_group_chat">Add public group</string>
    <string name="address">地址</string>
    <string name="address_book">Address book</string>
    <string name="agree">Agree</string>
    <string name="agreement_url">https://www.anlaiye.com.cn/appdown/rule.html</string>
    <string name="answer">Answer</string>
    <string name="app_channle_name">xiaomi</string>
    <string name="app_key">553f007e67e58e106400210a</string>
    <string name="app_name">俺来也</string>
    <string name="app_name_test">俺来也内测</string>
    <string name="app_share_content">你的好友正在使用【俺来也】玩转校园，为了解决宅男太宅，懒人太懒。我们诚挚邀请您成为一名筋斗云，帮忙送货，帮忙推广。您的每一次行动都会获得相应的报酬。赶快加入吧！</string>
    <string name="app_share_title">俺来也为你光速配送，您为俺来也无私分享。你造吗？这就是爱~节奏！</string>
    <string name="applyactivity_long_declaration">施主：拯救宣言不能多余25个字</string>
    <string name="applyactivity_no_declaration">亲爱滴童鞋：拯救宣言交给俺老孙看看！</string>
    <string name="applyactivity_no_name">大慈大悲的观音姐姐说做好事要留名！亲爱滴童鞋：请告诉俺老孙真实姓名哟！</string>
    <string name="are_empty_group_of_news">Clearing messages</string>
    <string name="attach_file">File</string>
    <string name="attach_location">Location</string>
    <string name="attach_picture">Image</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_video">Video</string>
    <string name="attach_video_call">Video call</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="back">Back</string>
    <string name="baidutieba">百度贴吧</string>
    <string name="baidutieba_client_inavailable">目前您的百度贴吧版本过低或未安装，需要安装百度贴吧才能使用</string>
    <string name="be_removing">Be removing</string>
    <string name="being_added">added</string>
    <string name="black_item">Black list</string>
    <string name="blacklist">Black list</string>
    <string name="bluetooth">蓝牙</string>
    <string name="book_black">Black list</string>
    <string name="btn_logon">快速登录</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_logout">Logout</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_send">button send</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="call_duration">call duration</string>
    <string name="can_not_connect_chat_server_connection">Cannot connect to server</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cant_find_pictures">cant find pictures</string>
    <string name="certinfo">证件</string>
    <string name="change_the_group_name_failed_please">Failed to change the group name, please check the network or try again later</string>
    <string name="chat_room">Chat room</string>
    <string name="chatroom_allow_owner_leave">Allow chatroom owner leave</string>
    <string name="chatset">Chat settings</string>
    <string name="content_description_icon">icon</string>
    <string name="home_headsearch_default">默认</string>
    <string name="home_headsearch_hint">请输入商品名称</string>
    <string name="home_headsearch_price">价格</string>
    <string name="home_headsearch_salesvolume">销量</string>
    <string name="session">Conversation</string>
    <string name="setting">Settings</string>
</resources>