<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <!--<RelativeLayout-->
        <!--android:id="@+id/rl_home_headview_vpbg"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!-->-->

        <!--&lt;!&ndash;<cn.com.anlaiye.activity.sell.views.SellHomeViewPager&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/vp_main_kv"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="fill_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="fill_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_alignParentLeft="true"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_alignParentTop="true"&ndash;&gt;-->
            <!--&lt;!&ndash;/>&ndash;&gt;-->

        <!--<LinearLayout-->
            <!--android:id="@+id/ll_viewpager_index"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginBottom="8.0dip"-->
            <!--android:orientation="horizontal"-->
            <!--/>-->
    <!--</RelativeLayout>-->

    <LinearLayout
        android:id="@+id/llyt_home_headview_search"
        android:layout_width="fill_parent"
        android:layout_height="38.0dip"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip"
        android:layout_marginTop="5.0dip"
        android:background="#50aaaaaa"
        android:gravity="center"
        android:visibility="visible"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_home_search"
            android:drawablePadding="5.0dip"
            android:gravity="center"
            android:text="@string/home_headsearch_hint"
            android:textColor="@color/gray_light"
            android:textSize="14.0sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sortParent"
        android:layout_width="fill_parent"
        android:layout_height="38.0dip"
        android:layout_marginBottom="5.0dip"
        android:background="@color/white"
        android:baselineAligned="false"
        >

        <RelativeLayout
            android:id="@+id/rlyt_home_headview_default"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="2.0"
            >

            <View
                style="@style/common_line_style"
                android:layout_alignParentBottom="true"
                />

            <TextView
                android:id="@+id/tv_home_headview_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/home_headsearch_default"
                android:textColor="@color/red"
                android:textSize="14.0sp"
                />

            <ImageView
                android:id="@+id/iv_home_headview_default"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/content_description_icon"
                android:scaleType="fitXY"
                android:src="@drawable/home_headview_hoverline"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlyt_home_headview_salesvolume"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="2.0"
            >

            <View
                style="@style/common_line_style"
                android:layout_alignParentBottom="true"
                />

            <TextView
                android:id="@+id/tv_home_headview_salesvolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="3.0dip"
                android:drawableRight="@drawable/home_headview_arrowdown_un"
                android:gravity="center"
                android:text="@string/home_headsearch_salesvolume"
                android:textColor="@color/gray_light"
                android:textSize="14.0sp"
                />

            <ImageView
                android:id="@+id/iv_home_headview_salesvolume"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/content_description_icon"
                android:scaleType="fitXY"
                android:src="@drawable/home_headview_hoverline"
                android:visibility="gone"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlyt_home_headview_price"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="2.0"
            >

            <View
                style="@style/common_line_style"
                android:layout_alignParentBottom="true"
                />

            <TextView
                android:id="@+id/tv_home_headview_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="3.0dip"
                android:drawableRight="@drawable/home_headview_arrowdown_un"
                android:gravity="center"
                android:text="@string/home_headsearch_price"
                android:textColor="@color/gray_light"
                android:textSize="14.0sp"
                />

            <ImageView
                android:id="@+id/iv_home_headview_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/content_description_icon"
                android:scaleType="fitXY"
                android:src="@drawable/home_headview_hoverline"
                android:visibility="gone"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlyt_home_headview_arrange"
            android:layout_width="38.0dip"
            android:layout_height="fill_parent"
            >

            <ImageView
                android:id="@+id/tv_home_headview_arrange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/content_description_icon"
                android:src="@drawable/goods_static_introduction"
                />

            <View
                style="@style/common_line_style"
                android:layout_alignParentBottom="true"
                />

            <View
                style="@style/common_line_horizontal_style"
                android:layout_alignParentLeft="true"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>