<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/common_bg"
    >

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="fill_parent"
        android:layout_height="52.0dip"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_bar_normal_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:id="@+id/btn_container_conversation"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            >

            <Button
                android:id="@+id/btn_conversation"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/main_bottom_item_bg"
                android:drawableTop="@drawable/tab_chat_bg"
                android:onClick="onTabClicked"
                android:paddingBottom="2.0dip"
                android:paddingTop="7.0dip"
                android:scaleType="matrix"
                android:text="@string/session"
                android:textColor="@color/main_botton_text_color"
                android:textSize="12.0sp"
                />

            <TextView
                android:id="@+id/unread_msg_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="1.0dip"
                android:background="@drawable/unread_count_bg"
                android:gravity="center"
                android:text="7"
                android:textColor="@android:color/white"
                android:textSize="12.0sp"
                android:visibility="invisible"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_address_list"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            >

            <Button
                android:id="@+id/btn_address_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/main_bottom_item_bg"
                android:drawableTop="@drawable/tab_contact_list_bg"
                android:onClick="onTabClicked"
                android:paddingBottom="2.0dip"
                android:paddingTop="7.0dip"
                android:scaleType="matrix"
                android:text="@string/address_book"
                android:textColor="@color/main_botton_text_color"
                android:textSize="12.0sp"
                />

            <TextView
                android:id="@+id/unread_address_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10.0dip"
                android:background="@drawable/unread_dot"
                android:visibility="visible"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_setting"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            >

            <Button
                android:id="@+id/btn_setting"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/main_bottom_item_bg"
                android:drawableTop="@drawable/tab_setting_bg"
                android:onClick="onTabClicked"
                android:paddingBottom="2.0dip"
                android:paddingTop="7.0dip"
                android:scaleType="matrix"
                android:text="@string/setting"
                android:textColor="@color/main_botton_text_color"
                android:textSize="12.0sp"
                />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/main_bottom"
        />
</RelativeLayout>